# easy-process

./: .env.example  .env.production.example  .gitignore  CLAUDE.md  Makefile  README.md  arquitetura-mvp-bpmn-ai.md  docker-compose.prod.yml  docker-compose.yml  plano-cobertura-testes.md  plano-implementacao-sprints.md
backend/: Dockerfile  Dockerfile.prod  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_create_tenants_and_users.py  002_create_projects_and_processes.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: auth.py  processes.py  projects.py  tenants.py
backend/app/core/: config.py  database.py  security.py
backend/app/models/: __init__.py  process.py  project.py  tenant.py  user.py
backend/app/schemas/: __init__.py  auth.py  process.py  project.py
backend/app/services/: __init__.py  bpmn_generator.py  bpmn_refiner.py  bpmn_validator.py  documentation.py  storage.py  transcription.py
backend/app/workers/: __init__.py  process_audio.py
backend/tests/: conftest.py  test_health.py
backend/tests/integration/: conftest.py  test_auth_api.py  test_chat_api.py  test_docs_api.py  test_e2e_pipeline.py  test_error_handling.py  test_pipeline.py  test_processes_api.py  test_projects_api.py  test_tenant_isolation.py  test_tenants_api.py  test_versions_api.py
backend/tests/unit/: test_bpmn_generator.py  test_bpmn_refiner.py  test_bpmn_validator.py  test_documentation.py  test_security.py  test_storage.py  test_transcription.py
frontend/: next.config.mjs  package-lock.json  package.json
(+41 files in other folders)
